--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/base.css">
+	<link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
 	<title>{{ page.title }}</title>
 </head>
 <body>
