complete footer, header desifgn

--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -1,9 +1,8 @@
 <footer>
-	<p class="thanks">
-		Powered by <br />
-		Github Pages / Jekyll / Font Awesome / Google Fonts / Compass
-	</p>
-	<p class="copyright">
-		&copy; 2015 re-mi&#x2606;
-	</p>
+	<section>
+		<p class="thanks">Powered by
+			<br />Github Pages / Jekyll / Font Awesome / Google Fonts / Compass</p>
+		<p class="copyright">Copyright &copy; 2015 re-mi
+			<i class="fa fa-star-o"></i>All rights reserved.</p>
+	</section>
 </footer>
