--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -1,13 +1,13 @@
 <header>
 	<div class="title">
-		re-mi
-		official website
+		<img src="image/id_logo.svg" alt="logo">
+		<span class="subtitle">official website</span>
 	</div>
 	<ul class="menu">
-		<li>home</li>
+		<li class="current">home</li>
 		<li>news</li>
 		<li>live</li>
-		<li>discography</li>
+		<li>disco<br>graphy</li>
 		<li>profile</li>
 		<li>blog</li>
 		<li>contact</li>
