--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/base.css">
-	<link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
-	<title>{{ page.title }}</title>
+	<% include common/_meta %>
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<% include common/_header %>
 	<section class="main-content">
+		
 		{{ content }}
 	</section>
 	<% include common/_footer %>
