--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,4 +3,13 @@
 footer {
 	font-family: "Questrial";
 	color: #d55;
+	background-color: lightpink;
+	padding: 40px;
+	margin: 40px 0;
+	
+	section {
+		width: 100%;
+		max-width: 980px;
+		margin: 0 auto;
+	}
 }
