header menu fixed

--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -4,7 +4,7 @@
 		<span class="subtitle">official website</span>
 	</div>
 	<ul class="menu">
-		<li class="current">home</li>
+		<li class="current">top</li>
 		<li>news</li>
 		<li>live</li>
 		<li>disco<br>graphy</li>
