--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,7 +28,8 @@ header {
 		display: table;
 		width: 100%;
 		table-layout: fixed;
-		border-collapse: collapse;
+		padding-bottom: 30px;
+		border-spacing: 6px 0;
 		li {
 			position: relative;
 			display: table-cell;
@@ -37,9 +38,9 @@ header {
 			height: 60px;
 			vertical-align: middle;
 			text-align: center;
-			border-color: transparent;
-			border-style: solid;
-			border-width: 0 6px 30px 6px;
+			// border-color: transparent;
+			// border-style: solid;
+			// border-width: 0 3px;
 			font-size: 18px;
 			transition: color 0.1s, background-color 0.1s;
 			-webkit-transition: color 0.1s, background-color 0.1s;
