--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,7 +5,7 @@ footer {
 	color: #d55;
 	background-color: lightpink;
 	padding: 40px;
-	margin: 40px 0;
+	margin-top: 40px;
 	
 	section {
 		width: 100%;
