--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,6 +4,12 @@
 @import "header";
 @import "footer";
 
+body {
+	color: #444;
+	font-family: "Segoe UI", "Meiryo", sans-serif;
+	min-width: 800px; // debug!
+}
+
 p {
 	margin: 12px 0;
 }
