--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,1 +1,62 @@
 // pages/index.scss
+
+section.main-content {
+	div.top-picture {
+		position: relative;
+		background-color: lightpink;
+		height: 600px; width: 100%;
+		max-width: 980px;
+		margin: 0 auto;
+		overflow: hidden;
+		
+		div.update-info-picture {
+			position: absolute;
+			height: 600px; width: 600px;
+			right: -200px; bottom: -200px;
+			border-radius: 50%;
+			background-color: lightpink;
+			background-clip: padding-box;
+			background-size: 70%;
+			background-repeat: no-repeat;
+			border: 40px solid white;
+			box-sizing: border-box;
+			overflow: hidden;
+		}
+		div.update-info-text {
+			position: absolute;
+			bottom: 0; right: 0; 
+			height: 100px; width: 300px;
+			background-color: #ffe0eb;
+			padding: 12px;
+			box-sizing: border-box;
+			border-style: solid;
+			border-color: white;
+			border-width: 12px 0 0 12px;
+			
+			div.date {
+				font-family: "Questrial";
+				color: #d55;
+				font-size: 20px;
+				margin-bottom: 6px;
+			}
+			div.text {
+				font-size: 12px;
+			}
+		}
+	}
+	
+	div.bottom-contents {
+		display: table;
+		table-layout: fixed;
+		width: 100%;
+		max-width: 980px;
+		margin: 20px auto;
+		border-spacing: 20px;
+		
+		section {
+			display: table-cell;
+			box-sizing: border-box;
+			vertical-align: top;
+		}
+	}
+}
