--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="main-header">
 	<div class="title">
 		<img src="image/id_logo.svg" alt="logo">
 		<span class="subtitle">official website</span>
