--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -33,17 +33,34 @@
 		
 		<div class="bottom-contents">
 			<section class="news">
-				News
-				{% for post in site.posts %}
-				{% for tag in post.tags %}
-				{% if tag == "news" %}
-				{{ post.title }}
+				<header>News</header>
+				{% for post in site.posts limit:3 %}
+				{% if post.tags contains "news" %}
+				<div class="post-thumb">
+					<div class="date">
+						{{ post.date | date: '%Y.%m.%d' }}
+					</div>
+					<div class="title">
+						{{ post.title }}
+					</div>
+				</div>
 				{% endif %}
-				{% endfor %}
 				{% endfor %}
 			</section>
 			<section class="live">
-				Live
+				<header>Live</header>
+				{% for post in site.posts limit:3 %}
+				{% if post.tags contains "live" %}
+				<div class="post-thumb">
+					<div class="date">
+						{{ post.date | date: '%Y.%m.%d' }}
+					</div>
+					<div class="title">
+						{{ post.title }}
+					</div>
+				</div>
+				{% endif %}
+				{% endfor %}
 			</section>
 			<section class="twitter">
 				<a class=twitter-timeline href=https://twitter.com/remiriya27 data-widget-id=607049707467120641 data-link-color=#d55 data-chrome=nofooter data-border-color=#ffc6d1 data-tweet-limit=3>Tweets from @remiriya27</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
