--- a/sass/base.scss
+++ b/sass/base.scss
@@ -6,7 +6,7 @@
 
 body {
 	color: #444;
-	font-family: "Segoe UI", "Meiryo", sans-serif;
+	font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Segoe UI", "Meiryo", sans-serif;
 	min-width: 800px; // debug!
 }
 
