complete index page

--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -3,13 +3,14 @@
 		<img src="image/id_logo.svg" alt="logo">
 		<span class="subtitle">official website</span>
 	</div>
-	<ul class="menu">
-		<li class="current">top</li>
-		<li>news</li>
-		<li>live</li>
-		<li>disco<br>graphy</li>
-		<li>profile</li>
-		<li>blog</li>
-		<li>contact</li>
-	</ul>
+	<div class="menu">
+		<a href="/" class="current">top</a>
+		<a href="#">news</a>
+		<a href="#">live</a>
+		<a href="#">disco<br />graphy</a>
+		<a href="#">profile</a>
+		<a href="http://iiriyaa.blog23.fc2.com/"
+			target="_blank">blog</a>
+		<a href="#">contact</a>
+	</div>
 </header>
