--- a/sass/base.scss
+++ b/sass/base.scss
@@ -6,6 +6,7 @@
 
 body {
 	color: #444;
+	//background-image: url("../image/background.jpg");
 	font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Segoe UI", "Meiryo", sans-serif;
 	min-width: 800px; // debug!
 }
