start make news.html

--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -5,7 +5,7 @@
 	</div>
 	<div class="menu">
 		<a href="/" class="current">top</a>
-		<a href="#">news</a>
+		<a href="news.html">news</a>
 		<a href="#">live</a>
 		<a href="#">disco<br />graphy</a>
 		<a href="#">profile</a>
@@ -14,3 +14,4 @@
 		<a href="#">contact</a>
 	</div>
 </header>
+{{ site }}
