--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -1,7 +1,9 @@
 <footer>
 	<section>
-		<p class="thanks">Powered by
-			<br />Github Pages / Jekyll / Font Awesome / Google Fonts / Compass</p>
+		<p class="thanks">
+			Hosted on Github Pages<br />
+			Powered by Jekyll
+		</p>
 		<p class="copyright">Copyright &copy; 2015 re-mi
 			<i class="fa fa-star-o"></i> All rights reserved.</p>
 	</section>
