--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -1,7 +1,7 @@
 <footer>
 	<section>
 		<p class="thanks">
-			Hosted on Github Pages<br />
+			Hosted on GitHub Pages<br />
 			Powered by Jekyll
 		</p>
 		<p class="copyright">Copyright &copy; 2015 re-mi
