--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -3,6 +3,7 @@
 <head>
 	<% include common/_meta %>
 	<link rel="stylesheet" href="css/pages/index.css">
+	<title>re-mi&#x2606;</title>
 </head>
 <body>
 	<% include common/_header %>
