--- a/ejs/news.ejs
+++ b/ejs/news.ejs
@@ -3,6 +3,7 @@
 <head>
 	<% include common/_meta %>
 	<link rel="stylesheet" href="css/pages/news.css">
+	<title>re-mi&#x2606; - News</title>
 </head>
 <body>
 	<% include common/_header %>
