--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<link rel="stylesheet" href="css/pages/index.css">
-	<title>re-mi&#x2606;</title>
+	<link rel="stylesheet" href="{{ base }}/css/pages/index.css">
+	<title>れーみ&#x2606;</title>
 </head>
 <body>
 	<% include common/_header %>
@@ -35,7 +35,6 @@
 				{% endfor %}
 			</div>
 		</div>
-		
 		<div class="bottom-contents">
 			<section class="news">
 				<header>News</header>
