--- a/ejs/news.ejs
+++ b/ejs/news.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<link rel="stylesheet" href="css/pages/news.css">
-	<title>re-mi&#x2606; - News</title>
+	<link rel="stylesheet" href="{{ base }}/css/pages/news.css">
+	<title>れーみ&#x2606; - News</title>
 </head>
 <body>
 	<% include common/_header %>
