--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -1,5 +1,10 @@
 <footer>
 	<section>
+		<a 	data-scroll
+			href="#top"
+			class="button-backtotop">
+			<i class="fa fa-chevron-circle-up fa-lg"></i> page top
+		</a>
 		<p class="thanks">
 			Hosted on GitHub Pages<br />
 			Powered by Jekyll
