--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -8,8 +8,25 @@ footer {
 	margin-top: 40px;
 	
 	section {
+		position: relative;
 		width: 100%;
 		max-width: 980px;
 		margin: 0 auto;
+		
+		a.button-backtotop {
+			display: block;
+			position: absolute;
+			top: -80px; right: 0;
+			width: 120px;
+			line-height: 50px;
+			text-decoration: none;
+			text-align: center;
+			color: white;
+			background-color: #d55;
+			
+			i.fa {
+				vertical-align: middle;
+			}
+		}
 	}
 }
