--- a/ejs/news.ejs
+++ b/ejs/news.ejs
@@ -16,7 +16,7 @@
 				</div>
 				<div class="text">
 					<div class="title">
-						{{ post.title }}
+						<a href="{{ base}}{{ post.url }}">{{ post.title }}</a>
 					</div>
 					<div class="content">
 						{{ post.content }}
