--- a/ejs/common/_meta.ejs
+++ b/ejs/common/_meta.ejs
@@ -3,7 +3,10 @@
 {% if    depth == 1 %}{% assign base = '.' %}
 {% elsif depth == 2 %}{% assign base = '..' %}
 {% elsif depth == 3 %}{% assign base = '../..' %}
-{% elsif depth == 4 %}{% assign base = '../../..' %}{% endif %}
+{% elsif depth == 4 %}{% assign base = '../../..' %}
+{% elsif depth == 5 %}{% assign base = '../../../..' %}
+{% elsif depth == 6 %}{% assign base = '../../../../..' %}
+{% endif %}
 
 <meta charset="UTF-8">
 <meta name="generator" content="Microsoft Visual Studio Code">
