add news post template

--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -5,9 +5,12 @@
 			class="button-backtotop">
 			<i class="fa fa-chevron-circle-up fa-lg"></i> page top
 		</a>
+		<p class="share">
+			<a href="https://twitter.com/share" class="twitter-share-button"
+				data-count="vertical"
+				>Tweet</a>
+		</p>
 		<p class="thanks">
-			Hosted on GitHub Pages<br />
-			Powered by Jekyll
 		</p>
 		<p class="copyright">Copyright &copy; 2015 re-mi
 			<i class="fa fa-star-o"></i> All rights reserved.</p>
