--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -76,6 +76,10 @@ section.main-content {
 					font-size: 18px;
 					margin-bottom: 6px;
 				}
+				div.title a {
+					color: inherit;
+					text-decoration: none;
+				}
 			}
 		}
 	}
