--- a/sass/pages/news.scss
+++ b/sass/pages/news.scss
@@ -24,6 +24,15 @@ section.main-content {
 			div.title {
 				font-weight: bolder;
 				line-height: 32px;
+				
+				a {
+					color: inherit;
+					text-decoration: none;
+				}
+			}
+			
+			div.share-post {
+				margin-top: 40px;
 			}
 		}
 	}
