add all base pages

--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -14,24 +14,24 @@
 			class="current"
 			{% endif %}
 			>news</a>
-		<a href="#"
+		<a href="{{ base }}/live"
 			{% if page.name contains "live" %}
 			class="current"
 			{% endif %}
 			>live</a>
-		<a href="#"
+		<a href="{{ base }}/discography"
 			{% if page.name contains "discography" %}
 			class="current"
 			{% endif %}
 			>disco<br />graphy</a>
-		<a href="#"
+		<a href="{{ base }}/profile"
 			{% if page.name contains "profile" %}
 			class="current"
 			{% endif %}
 			>profile</a>
 		<a href="http://iiriyaa.blog23.fc2.com/"
 			target="_blank">blog</a>
-		<a href="#"
+		<a href="{{ base }}/contact"
 			{% if page.name contains "contact" %}
 			class="current"
 			{% endif %}
