--- a/ejs/contact.ejs
+++ b/ejs/contact.ejs
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<title>れーみ&#x2606; - Live</title>
 </head>
 <body>
 	<% include common/_header %>
-		<section class="main-content">
-			<header class="page-title">live</header>
-		</section>
+	<section class="main-content">
+		<header class="page-title">contact</header>
+	</section>
 	<% include common/_footer %>
 </body>
 </html>
