fix Liquid code

--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -68,6 +68,7 @@ section.main-content {
 			div.post-thumb {
 				border-left: 8px solid #d55;
 				padding: 12px;
+				margin: 12px 0;
 				box-sizing: border-box;
 				div.date {
 					font-family: "Questrial";
