--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -22,23 +22,19 @@
 				">
 			</div>
 			<div class="update-info-text">
-				{% for post in site.posts limit:1 %}
-				{% if post.category == "news" %}
+				{% assign post = site.categories.news[0] %}
 				<div class="date">
 					{{ post.date | date: '%Y.%m.%d' }}
 				</div>
 				<div class="text">
 					{{ post.title }}
 				</div>
-				{% endif %}
-				{% endfor %}
 			</div>
 		</div>
 		<div class="bottom-contents">
 			<section class="news">
 				<header>News</header>
-				{% for post in site.posts limit:3 %}
-				{% if post.category == "news" %}
+				{% for post in site.categories.news limit:3 %}
 				<div class="post-thumb">
 					<div class="date">
 						{{ post.date | date: '%Y.%m.%d' }}
@@ -48,13 +44,11 @@
 							<i class="fa fa-arrow-circle-right fa-lg"></i></a>
 					</div>
 				</div>
-				{% endif %}
 				{% endfor %}
 			</section>
 			<section class="live">
 				<header>Live</header>
-				{% for post in site.posts limit:3 %}
-				{% if post.category == "live" %}
+				{% for post in site.categories.live limit:3 %}
 				<div class="post-thumb">
 					<div class="date">
 						{{ post.date | date: '%Y.%m.%d' }}
@@ -63,7 +57,6 @@
 						{{ post.title }}
 					</div>
 				</div>
-				{% endif %}
 				{% endfor %}
 			</section>
 			<section class="twitter">
