--- a/ejs/news.ejs
+++ b/ejs/news.ejs
@@ -17,6 +17,7 @@
 				<div class="text">
 					<div class="title">
 						<a href="{{ base }}{{ post.url }}">{{ post.title }}</a>
+							<i class="fa fa-arrow-circle-right fa-lg"></i></a>
 					</div>
 					<div class="content">
 						{{ post.content }}
