delete some ejs and fix md

--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -8,6 +8,7 @@
 		<p class="share">
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
+				data-text="れーみ&#x2606; official website"
 				>Tweet</a>
 		</p>
 		<p class="thanks">
