--- a/ejs/common/_meta.ejs
+++ b/ejs/common/_meta.ejs
@@ -14,6 +14,10 @@
 <link rel="stylesheet" href="{{ base }}/css/base.css">
 <link rel="stylesheet" href="{{ base }}/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+{% if page.extracss != null %}
+<link rel="stylesheet" href="{{ base }}{{page.extracss}}">
+{% endif %}
+
 <script src="{{ base }}/js/smooth-scroll.min.js"></script>
 <script src="{{ base }}/js/app.js"></script>
 <script>window.twttr = (function(d, s, id) {
