--- a/ejs/default.ejs
+++ b/ejs/default.ejs
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<title>れーみ&#x2606; - Discography</title>
 </head>
 <body>
 	<% include common/_header %>
 	<section class="main-content">
-		<header class="page-title">discography</header>
+		<header class="page-title">{{ page.displaytitle }}</header>
+		{{ content }}
 	</section>
 	<% include common/_footer %>
 </body>
