add viewport description

--- a/ejs/common/_meta.ejs
+++ b/ejs/common/_meta.ejs
@@ -11,6 +11,7 @@
 <meta charset="UTF-8">
 <meta name="generator" content="Microsoft Visual Studio Code">
 <meta name="author" content="Yadex205 <yadex205@outlook.jp>">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="{{ base }}/css/base.css">
 <link rel="stylesheet" href="{{ base }}/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
