--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -5,14 +5,13 @@
 			class="button-backtotop">
 			<i class="fa fa-chevron-circle-up fa-lg"></i> page top
 		</a>
-		<p class="share">
+		<div class="share">
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
 				data-text="れーみ&#x2606; official website"
 				>Tweet</a>
-		</p>
-		<p class="thanks">
-		</p>
+			<div class="fb-share-button" data-layout="box_count"></div>
+		</div>
 		<p class="copyright">Copyright &copy; 2015 re-mi
 			<i class="fa fa-star-o"></i> All rights reserved.</p>
 	</section>
