--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -1,3 +1,4 @@
+<div id="fb-root"></div>
 <header id="top" class="main-header">
 	<div class="title">
 		<img src="{{ base }}/image/id_logo.svg" alt="logo">
