--- a/ejs/post.ejs
+++ b/ejs/post.ejs
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<title>れーみ&#x2606; - {{ page.title }}</title>
 	<link rel="stylesheet" href="{{ base }}/css/pages/news.css">
 </head>
 <body>
@@ -24,6 +23,7 @@
 					<a href="https://twitter.com/share" class="twitter-share-button"
 						data-text="{{ page.title }} - れーみ&#x2606; official website"
 						></a>
+					<div class="fb-share-button" data-layout="button_count"></div>
 				</div>
 			</div>
 		</article>
