change base css

--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -25,11 +25,11 @@
 			class="current"
 			{% endif %}
 			>disco<br />graphy</a>
-		<a href="{{ base }}/profile"
-			{% if page.name contains "profile" %}
+		<a href="{{ base }}/biography"
+			{% if page.name contains "biography" %}
 			class="current"
 			{% endif %}
-			>profile</a>
+			>biography</a>
 		<a href="http://iiriyaa.blog23.fc2.com/"
 			target="_blank">blog</a>
 		<a href="{{ base }}/contact"
