--- a/sass/pages/news.scss
+++ b/sass/pages/news.scss
@@ -2,9 +2,7 @@
 
 section.main-content {
 	article.post {
-		margin: 24px;
-		box-sizing: border-box;
-		
+		margin: 24px 0;
 		div.date {
 			display: inline-block;
 			vertical-align: top;
