--- a/sass/base.scss
+++ b/sass/base.scss
@@ -31,3 +31,20 @@ section.main-content-outer {
 		box-sizing: border-box;
 	}
 }
+
+// markdown
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bolder;
+	margin: 20px 0; 
+}
+h1 { font-size: 36px; }
+h2 { font-size: 32px; }
+h3 { font-size: 28px; }
+h4 { font-size: 24px; }
+h5 { font-size: 20px; }
+h6 { font-size: 16px; }
+
+p {
+	margin: 20px 0;
+}
