--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -12,7 +12,7 @@
 				>Tweet</a>
 			<div class="fb-share-button" data-layout="box_count"></div>
 		</div>
-		<p class="copyright">Copyright &copy; 2015 re-mi
+		<p class="copyright">Copyright &copy; re-mi
 			<i class="fa fa-star-o"></i> All rights reserved.</p>
 	</section>
 </footer>
