--- a/ejs/post.ejs
+++ b/ejs/post.ejs
@@ -7,7 +7,7 @@
 <body>
 	<% include common/_header %>
 	<section class="main-content-outer">
-		<header class="page-title">live</header>
+		<header class="page-title">{{ page.category }}</header>
 		<section class="main-content">
 			<article class="post">
 				<div class="date">
