--- a/ejs/common/_meta.ejs
+++ b/ejs/common/_meta.ejs
@@ -1,5 +1,5 @@
 {% assign base = '' %}
-{% assign depth = page.url | split: '/' | size %}
+{% assign depth = page.url | append:'foo' | split: '/' | size | minus:1 %}
 {% if    depth == 1 %}{% assign base = '.' %}
 {% elsif depth == 2 %}{% assign base = '..' %}
 {% elsif depth == 3 %}{% assign base = '../..' %}
