--- a/sass/base.scss
+++ b/sass/base.scss
@@ -7,7 +7,7 @@
 body {
 	color: #444;
 	//background-image: url("../image/background.jpg");
-	font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Segoe UI", "Meiryo", sans-serif;
+	font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Segoe UI", "Meiryo", "Questrial", sans-serif;
 	min-width: 800px; // debug!
 }
 
@@ -47,4 +47,5 @@ h6 { font-size: 16px; }
 
 p {
 	margin: 20px 0;
+	line-height: 140%;
 }
