--- a/ejs/post.ejs
+++ b/ejs/post.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<% include common/_meta %>
-	<link rel="stylesheet" href="{{ base }}/css/pages/news.css">
+	<link rel="stylesheet" href="{{ page.url | ptr }}/css/pages/news.css">
 </head>
 <body>
 	<% include common/_header %>
