--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -30,8 +30,8 @@
 			class="current"
 			{% endif %}
 			>biography</a>
-		<a href="http://iiriyaa.blog23.fc2.com/"
-			target="_blank">blog</a>
+		<a href="http://ameblo.jp/remiriya27/"
+			target="_blank">blog <i class="fa fa-external-link-square"></i></a>
 		<a href="{{ page.url | ptr }}/contact"
 			{% if page.name contains "contact" %}
 			class="current"
