--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -12,7 +12,10 @@
 				>Tweet</a>
 			<div class="fb-share-button" data-layout="box_count"></div>
 		</div>
-		<p class="copyright">Copyright &copy; re-mi
-			<i class="fa fa-star-o"></i> All rights reserved.</p>
+		<p class="copyright">
+			Hosted on GitHub Pages<br />
+			<a href="{{ page.url | ptr }}/policy/">Site Policy</a> | 
+			Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
+		</p>
 	</section>
 </footer>
