--- a/sass/base.scss
+++ b/sass/base.scss
@@ -15,6 +15,10 @@ p {
 	margin: 12px 0;
 }
 
+a {
+	color: inherit;
+}
+
 section.main-content-outer {
 	width: 100%;
 	max-width: 980px;
@@ -48,4 +52,9 @@ h6 { font-size: 16px; }
 p {
 	margin: 20px 0;
 	line-height: 140%;
+}
+
+code {
+	display: block;
+	margin: 6px 0;
 }
