--- a/ejs/post.ejs
+++ b/ejs/post.ejs
@@ -23,8 +23,11 @@
 					<div class="share-post">
 						<a href="https://twitter.com/share" class="twitter-share-button"
 							data-text="{{ page.title }} - れーみ&#x2606; official website"
+							data-url="http://remi-star.com{{page.url}}"
 							></a>
-						<div class="fb-share-button" data-layout="button_count"></div>
+						<div class="fb-share-button"
+							data-layout="button_count"
+							data-href="http://remi-star.com{{page.url}}"></div>
 					</div>
 				</div>
 			</article>
