--- a/src/_includes/_meta.html
+++ b/src/_includes/_meta.html
@@ -4,13 +4,13 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <META NAME="ROBOTS" CONTENT="NOINDEX,NOFOLLOW,NOARCHIVE"> 
 <link rel="stylesheet" href="{{ page.url | ptr }}/css/base.css">
-<link rel="stylesheet" href="{{ page.url | ptr }}/css/font-awesome.min.css">
+<link rel="stylesheet" href="{{ page.url | ptr }}/vendor/font-awesome/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
 {% if page.extracss != null %}
 <link rel="stylesheet" href="{{ page.url | ptr }}{{page.extracss}}">
 {% endif %}
 
-<script src="{{ page.url | ptr }}/js/smooth-scroll.min.js"></script>
+<script src="{{ page.url | ptr }}/vendor/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
 <script src="{{ page.url | ptr }}/js/app.js"></script>
 <script>
 window.twttr = (function(d, s, id) {
