--- a/src/_includes/_header.html
+++ b/src/_includes/_header.html
@@ -29,7 +29,7 @@
 			{% if page.name contains "biography" %}
 			class="current"
 			{% endif %}
-			>biography</a>
+			>bio<br />graphy</a>
 		<a href="http://ameblo.jp/remiriya27/"
 			target="_blank">blog <i class="fa fa-external-link-square"></i></a>
 		<a href="{{ page.url | ptr }}/contact"
