--- a/src/_compass/_footer.scss
+++ b/src/_compass/_footer.scss
@@ -30,3 +30,17 @@ footer {
 		}
 	}
 }
+
+@media screen and (max-width: 640px) {
+	footer {
+		padding: 0 40px 20px 40px;
+		section {
+			a.button-backtotop {
+				position: relative;
+				top: 0;
+				width: 100%;
+				margin-bottom: 20px;
+			}
+		}
+	}
+}
