responsible header and footer

--- a/src/_compass/_header.scss
+++ b/src/_compass/_header.scss
@@ -1,6 +1,8 @@
 // _header.scss
 
 header.main-header {
+	position: relative;
+	width: 100%;
 	font-family: "Questrial";
 	color: #d55;
 	background-color: lightpink;
@@ -75,6 +77,12 @@ header.main-header {
 			}
 		}
 	}
+	input#sp-menu-trigger {
+		display: none;
+	}
+	div.sp-menu {
+		display: none;
+	}
 }
 
 @media screen and (max-width: 800px) {
@@ -89,6 +97,7 @@ header.main-header {
 @media screen and (max-width: 600px) {
 	header.main-header {
 		padding: 0 20px;
+		width: 100%;
 		div.title {
 			padding: 20px 0;
 			img {
@@ -104,6 +113,36 @@ header.main-header {
 		}
 		div.menu {
 			display: none;
+		}
+		div.sp-menu {
+			position: fixed;
+			display: block;
+			z-index: 100;
+			width: 48px; height: 48px;
+			right: 20px; top: 20px;
+			line-height: 48px;
+			text-align: center;
+			background-color: #d55;
+			color: white;
+			overflow: hidden;
+			label {
+				text-align: center;
+				display: inline-block;
+				width: 48px;
+				height: 48px;
+				cursor: pointer;
+			}
+		}
+		input#sp-menu-trigger:checked + div.sp-menu {
+			text-align: right;
+			right: 0; top: 0;
+			width: 100%; height: 100%;
+			box-sizing: border-box;
+			padding: 20px;
+			overflow-y: auto;
+			a {
+				font-size: 20px;
+			}
 		}
 	}
 }
