--- a/src/_compass/pages/index.scss
+++ b/src/_compass/pages/index.scss
@@ -88,6 +88,7 @@ section.main-content {
 @media screen and (max-width: 800px) {
 	section.main-content {
 		div.top-picture {
+			height: 400px;
 			div.update-info-picture {
 				display: none;
 			}
